# pythonTutorial

./: README.md  pyproject.toml
4_functionsModules/: calculator.py  implement_calc.py
6_exception_handling/: Exception_handling.ipynb
7_webApps/: data_analysis_pandas.py  data_analysis_streamlit.py
7_webApps/model_app/: diabetes_ml.py
7_webApps/models_data/: models.bak
7_webApps/python_for_ml_notebooks/: Numpy Basics.ipynb  pandas_demo.ipynb  pandas_tutorial.ipynb
7_webApps/python_for_ml_notebooks/.ipynb_checkpoints/: python_for_machine_learning-checkpoint.ipynb
resourceFiles/: utilities.py
