[project]
name = "tutorial"
version = "0.1.0"
description = ""
authors = [
    {name = "Chetan",email = "chetanadhikary@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "streamlit (>=1.42.0,<2.0.0)",
    "ucimlrepo (>=0.0.7,<0.0.8)",
    "scikit-learn (>=1.6.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
